Feedback-driven updates: DTO attributes, stored proc boundary, release gating
Changes based on team feedback:

1. DTO Detection — [Dto] attribute support
   Classes can now be marked with [Dto] instead of requiring naming
   conventions. Also recognizes [DataContract] and [Serializable].

2. Stored Procedure Boundary Detection
   Detects Dapper and ADO.NET calls to stored procedures from C# code.
   New report section shows which procs your code depends on and which
   classes call them — cross-team dependency documentation.

3. Release Branch Pipeline Gating
   Pipeline triggers on PRs to release/* and main, not every feature
   branch. Designed for single-developer workflows where the quality
   gate matters at release time, not per-commit.

4. Pre-built NuGet Package
   Included in tools/ for easy dotnet tool install without a feed.

--- a/azure-pipelines.yml.example
+++ b/azure-pipelines.yml.example
@@ -1,7 +1,7 @@
-# Azure DevOps Pipeline — Architecture Quality Gate
-#
-# This pipeline runs the DSL architecture report on every PR
-# and blocks the merge if policy thresholds are exceeded.
+# This pipeline runs the DSL architecture report when creating or updating a
+# PR to a release branch, providing a quality gate before production deployment.
+# For teams with single-developer workflows (no peer review), this provides
+# automated architecture review at the point that matters — release time.
 #
 # Prerequisites:
 # 1. Build the NuGet package: dotnet pack src/DiagnosticStructuralLens.Cli -c Release -o ./tools
@@ -14,7 +14,7 @@ pr:
   branches:
     include:
       - main
-      - develop
+      - 'release/*'
 
 pool:
   vmImage: 'windows-latest'
